# list_android_activities

./: README.md  main.py  pyproject.toml
